// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DisplayUserProgress component snapshot matches last results 1`] = `
<body>
  <div>
    <div>
      <div
        class="text-xl text-gray-800 w-11/12 col gap-4 mx-auto py-4"
        data-testid="display-user-progress-container"
      >
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <div
            class="flex items-center gap-5"
            data-testid="user-header-container"
          >
            <img
              alt="user avatar icon"
              class="rounded-full"
              data-nimg="1"
              decoding="async"
              height="50"
              loading="lazy"
              src="/_next/image?url=%2Favatar.png&w=128&q=75"
              srcset="/_next/image?url=%2Favatar.png&w=64&q=75 1x, /_next/image?url=%2Favatar.png&w=128&q=75 2x"
              style="color: transparent;"
              width="50"
            />
            <h1
              class="text-3xl"
            >
              mock user
            </h1>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        />
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2>
            This is your progress
          </h2>
          <h2>
            Congratulations you are number 
            1
             in the Leader board
          </h2>
          <h3>
            Total questions answered: 
            1
          </h3>
          <h3>
            Total correct answers: 
            1
          </h3>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2
            class="my-3"
          >
            Your last played results
          </h2>
          <div
            class="col md:flex-row gap-3"
            data-testid="stats-container"
          >
            <div
              class="col md:w-1/3 gap-3 bg-light dark:bg-transparent dark:border-2 dark:border-light p-4 rounded-lg shadow-md"
            >
              <div
                class="flex justify-between border-b-2 border-gray-800"
              >
                <h3
                  class="text-2xl"
                >
                  Easy
                </h3>
                <p>
                  1
                  /
                  1
                </p>
              </div>
              <div
                class="col gap-3"
              >
                <div>
                  <h4>
                    Science
                  </h4>
                  <div
                    class="ml-3"
                  >
                    <p>
                      total: 
                      1
                    </p>
                    <p>
                      correct:
                       
                      1
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2
            class="my-3"
          >
            Your overall stats
          </h2>
          <div
            class="col md:flex-row gap-3"
            data-testid="stats-container"
          >
            <div
              class="col md:w-1/3 gap-3 bg-light dark:bg-transparent dark:border-2 dark:border-light p-4 rounded-lg shadow-md"
            >
              <div
                class="flex justify-between border-b-2 border-gray-800"
              >
                <h3
                  class="text-2xl"
                >
                  Easy
                </h3>
                <p>
                  1
                  /
                  1
                </p>
              </div>
              <div
                class="col gap-3"
              >
                <div>
                  <h4>
                    Science
                  </h4>
                  <div
                    class="ml-3"
                  >
                    <p>
                      total: 
                      1
                    </p>
                    <p>
                      correct:
                       
                      1
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`DisplayUserProgress component snapshot matches no user stats 1`] = `
<body>
  <div>
    <div>
      <div
        class="text-xl text-gray-800 w-11/12 col gap-4 mx-auto py-4"
        data-testid="display-user-progress-container"
      >
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <div
            class="flex items-center gap-5"
            data-testid="user-header-container"
          >
            <img
              alt="user avatar icon"
              class="rounded-full"
              data-nimg="1"
              decoding="async"
              height="50"
              loading="lazy"
              src="/_next/image?url=%2Favatar.png&w=128&q=75"
              srcset="/_next/image?url=%2Favatar.png&w=64&q=75 1x, /_next/image?url=%2Favatar.png&w=128&q=75 2x"
              style="color: transparent;"
              width="50"
            />
            <h1
              class="text-3xl"
            >
              mock user
            </h1>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        />
        <h2
          data-testid="no-stats-available"
        >
          You have not answered any questions yet.
           
          <a
            class="text-gray-600 hover:text-gray-800 hover:underline decoration-solid"
            href="/"
          >
            Click here to play
          </a>
          .
        </h2>
      </div>
    </div>
  </div>
</body>
`;

exports[`DisplayUserProgress component snapshot matches user's progress 1`] = `
<body>
  <div>
    <div>
      <div
        class="text-xl text-gray-800 w-11/12 col gap-4 mx-auto py-4"
        data-testid="display-user-progress-container"
      >
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <div
            class="flex items-center gap-5"
            data-testid="user-header-container"
          >
            <img
              alt="user avatar icon"
              class="rounded-full"
              data-nimg="1"
              decoding="async"
              height="50"
              loading="lazy"
              src="/_next/image?url=%2Favatar.png&w=128&q=75"
              srcset="/_next/image?url=%2Favatar.png&w=64&q=75 1x, /_next/image?url=%2Favatar.png&w=128&q=75 2x"
              style="color: transparent;"
              width="50"
            />
            <h1
              class="text-3xl"
            >
              mock user
            </h1>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        />
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2>
            This is your progress
          </h2>
          <h2>
            Congratulations you are number 
            1
             in the Leader board
          </h2>
          <h3>
            Total questions answered: 
            1
          </h3>
          <h3>
            Total correct answers: 
            1
          </h3>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2
            class="my-3"
          >
            Your last played results
          </h2>
          <div
            class="col md:flex-row gap-3"
            data-testid="stats-container"
          >
            <div
              class="col md:w-1/3 gap-3 bg-light dark:bg-transparent dark:border-2 dark:border-light p-4 rounded-lg shadow-md"
            >
              <div
                class="flex justify-between border-b-2 border-gray-800"
              >
                <h3
                  class="text-2xl"
                >
                  Easy
                </h3>
                <p>
                  1
                  /
                  1
                </p>
              </div>
              <div
                class="col gap-3"
              >
                <div>
                  <h4>
                    Science
                  </h4>
                  <div
                    class="ml-3"
                  >
                    <p>
                      total: 
                      1
                    </p>
                    <p>
                      correct:
                       
                      1
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          style="opacity: 0; transform: translateY(-200px) rotate(20deg) translateZ(0);"
        >
          <h2
            class="my-3"
          >
            Your overall stats
          </h2>
          <div
            class="col md:flex-row gap-3"
            data-testid="stats-container"
          >
            <div
              class="col md:w-1/3 gap-3 bg-light dark:bg-transparent dark:border-2 dark:border-light p-4 rounded-lg shadow-md"
            >
              <div
                class="flex justify-between border-b-2 border-gray-800"
              >
                <h3
                  class="text-2xl"
                >
                  Easy
                </h3>
                <p>
                  1
                  /
                  1
                </p>
              </div>
              <div
                class="col gap-3"
              >
                <div>
                  <h4>
                    Science
                  </h4>
                  <div
                    class="ml-3"
                  >
                    <p>
                      total: 
                      1
                    </p>
                    <p>
                      correct:
                       
                      1
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
